--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/BigPugLabs/hotdog#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
