--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hotdog",
   "version": "1.0.0",
   "description": "experiment in handling gpx data",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "mocha",
-    "start": "node index",
+    "start": "node main",
     "dev": "nodemon"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
     "mocha": "^10.0.0",
+    "mongodb-memory-server": "^8.8.0",
     "nodemon": "^2.0.19",
     "nyc": "^15.1.0"
   }
